[package]
name = "bevy-gis"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
bevy = { version = "0.13", features = [ "wayland" ] }
bytes = "1.6.0"
console_log = "1.0.0"
reqwest = { version = "0.12.4", features = [ "blocking" ] }
