[package]
name = "bevy-gis"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
async-std = "1.12.0"
bevy = { version = "0.13", features = ["wayland"] }
bevy-inspector-egui = "0.24.0"
bevy_async_task = "0.1.1"
bevy_mod_reqwest = "0.14.2"
bevy_pancam = "0.11.1"
console_log = "1.0.0"
image = "0.24.9"
rand = "0.8.5"
reqwest = "0.12.4"
